--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,12 @@ jobs:
     - name: Set up Ruby
       uses: actions/setup-ruby@v1
       with:
-        version: '>=2.3'
+        ruby-version: '>=2.3'
 
     - name: Install RubyGems
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
 
-    - name: Validate Ruby syntax
-      run: bundle exec ruby -c *.rb
+    - name: Test TwitterDelete initialisation
+      run: bundle exec twitter_delete.rb --test
