Add scheduled workflow
This allows automatic deletion of tweets.

Also:
- update Ruby version in workflows
- cleanup README
- note how to use workflow in README
- add TWITTER_DAYS to make workflow more generic

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,9 @@ jobs:
       uses: actions/checkout@master
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: actions/setup-ruby@master
       with:
-        ruby-version: '>=2.3'
+        ruby-version: '>=2.6'
 
     - name: Install RubyGems
       run: |
